<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DishFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tvDishHeader"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:text="@string/Dish"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieDish"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDishHeader"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/foodcarousel"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <EditText
        android:id="@+id/edtDish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Dish"
        android:inputType="text"
        android:autofillHints="username"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieDish"
        style="@style/ThemeOverlay.Material3.TextInputEditText"
        />

    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Price"
        android:inputType="numberDecimal"
        android:layout_marginTop="0dp"
        android:autofillHints="Price"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDish"
        style="@style/ThemeOverlay.Material3.TextInputEditText"

        />

    <Button
        android:id="@+id/btnUpdateDish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/update"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPrice"
        style="@style/ShapeAppearanceOverlay.Material3.Button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>