<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StandingDataEditFragment"
    android:background="@color/material_dynamic_neutral10">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <TextView
            android:id="@+id/tvName"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:text="Name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtName"
            android:hint="@string/canteen_name"
            style="@style/Widget.Material3.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toTopOf="@id/tvName" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dvAfterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/edtName" />

        <TextView
            android:id="@+id/tvPhoneHeader"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:text="Phone"
            app:layout_constraintTop_toBottomOf="@id/dvAfterName" />

        <EditText
            android:id="@+id/edtPhone"
            android:hint="@string/phone"
            style="@style/Widget.Material3.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@id/tvPhoneHeader" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dvAfterPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/edtPhone" />

        <TextView
            android:id="@+id/tvWebsiteHeader"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:text="Website"
            app:layout_constraintTop_toBottomOf="@id/dvAfterPhone" />


        <EditText
            android:id="@+id/edtWebsite"
            style="@style/Widget.Material3.TextInputEditText.FilledBox"
            android:hint="@string/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@id/tvWebsiteHeader" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dvAfterWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/edtWebsite" />

        <TextView
            android:id="@+id/tvAddressHeader"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:text="Addresse"
            app:layout_constraintTop_toBottomOf="@id/dvAfterWebsite" />

        <EditText
            android:id="@+id/edtAddress"
            android:hint="@string/address"
            style="@style/Widget.Material3.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@id/tvAddressHeader" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fcwMap"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_canteen_map"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:tag="@string/tag_map_fragment"
            app:layout_constraintTop_toBottomOf="@id/edtAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>